15370
On 2.8RC2, I encountered the following weird compile error for _* pattern match with default argument,
```scala
$$ scala
Welcome to Scala version 2.8.0.RC2 (Java HotSpot(TM) Client VM, Java 1.6.0_16).
Type in expressions to have them evaluated.
Type :help for more information.

scala> def foo(p: => Unit)(x:Int = 0) = x
foo: (p: => Unit)(x: Int)Int

scala> foo{val List(_*)=List(0); 1}()
<console>:7: error: star patterns must correspond with varargs parameters
       foo{val List(_*)=List(0); 1}()
                     ^

scala> foo{val List(_*)=List(0); 1}(1)
res1: Int = 1
```

On the other hand, **def foo(x:Int = 0)(p: => Unit) = x** has no problem,
```scala
scala> def foo(x:Int = 0)(p: => Unit) = x
foo: (x: Int)(p: => Unit)Int

scala> foo(){val List(_*)=List(0); 1}
res2: Int = 0

scala> foo(1){val List(_*)=List(0); 1}
res3: Int = 1
```
